[package]
name = "netlify-rust"
version = "0.1.0"
authors = ["Benjamin Lannon <benjamin@lannonbr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4.2"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
sha1 = "0.6.0"
structopt = "0.3.21"
walkdir = "2.3.2"
tokio = { version = "1", features = ["full"] }
