[package]
name = "netlify_deploy"
version = "0.2.0"
authors = [ "Benjamin Lannon <benjamin@lannonbr.com>" ]
license = "MIT"
repository = "https://github.com/lannonbr/netlify_deploy"
homepage = "https://github.com/lannonbr/netlify_deploy"
description = "Rust CLI to deploy sites to Netlify"
edition = "2018"
readme = "readme.md"

[dependencies]
envy = "0.4.2"
reqwest = { version = "0.11.3", features = [ "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.64"
sha1 = "0.6.0"
structopt = "0.3.21"
walkdir = "2.3.2"
tokio = { version = "1", features = [ "full" ] }
bimap = { version = "0.6.1", features = [ "serde" ] }
color-eyre = "0.5"
